--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,7 @@
 						else if(/TD|Td/.test(courses[i].name)) colorClass="td";
 						else if(/CM/.test(courses[i].name)) colorClass="cm";
 						else if(/PPP|Projet|projet|ppp/.test(courses[i].name)) colorClass="ppp";
+                        else if(!/Amphi|amphi/.test(courses[i].location)) colorClass="td";
                 %>
                 <div class="course<%= " "+colorClass %>">
                     <h2><%= courses[i].name %></h1>
@@ -67,7 +68,7 @@
         <div class="sideBar">
             <h1>Sélection groupe</h1>
             <form class="groupSelector" action="/" method="get">
-                <select class="select" id="selectDeps">
+                <select class="select noSwipe" id="selectDeps">
                     <%
                     for ( var i = 0; i < options.deps.length; i++ )
                     {
@@ -76,7 +77,7 @@
                     }
                     %>
                 </select>
-                <select name="group" class="select" id="selectGroup">
+                <select name="group" class="select noSwipe" id="selectGroup">
                     <%
                         for ( var j = 0; j < options.deps.length; j++ ) {
                             var dep = options.deps[ j ];
