Add cmatrix page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Chela+One" rel="stylesheet">
   </head>
   <body>
+    <a href="/cmatrix"></a>
     <input type="checkbox" id="side-checkbox" <%= menu?"checked":"" %>></input>
 
     <div class="page">
