--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -183,6 +183,16 @@ h1.title
         h1
             margin-top: 5px
 
+        .time_pick
+            display: inline-block
+
+        .timepicker_wrap
+            width: 190px
+
+        input.pick
+            width: 90px
+            text-align: center
+
         ul
             list-style-type: none
             display: inline-block
@@ -198,6 +208,9 @@ h1.title
             display: inline-block
             padding: 5px 7px
             font-size: 18px
+
+        .use
+            color: #333
 
     footer
         height: 30px
