--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/normalize.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
     <link rel="stylesheet" href="/css/font-awesome.min.css">
+    <link rel='stylesheet' type='text/css' href='css/timepicki.css'/>
 	<link href="https://fonts.googleapis.com/css?family=Chela+One" rel="stylesheet">
   </head>
   <body>
@@ -67,7 +68,7 @@
         <div class="sideBar">
             <h1>Sélection groupe</h1>
             <form class="groupSelector" action="/" method="get">
-                <select class="select" id="selectDeps">
+                <select class="select noSwipe" id="selectDeps">
                     <%
                     for ( var i = 0; i < options.deps.length; i++ )
                     {
@@ -76,7 +77,7 @@
                     }
                     %>
                 </select>
-                <select name="group" class="select" id="selectGroup">
+                <select name="group" class="select noSwipe" id="selectGroup">
                     <%
                         for ( var j = 0; j < options.deps.length; j++ ) {
                             var dep = options.deps[ j ];
@@ -94,15 +95,20 @@
                 <div id="pop-up" class=""><p>Error</p></div>
             </form>
             <div class="unused">
-                <%var s = unused.length === 1 ? "":"s" %>
-                <h1>Salle<%=s%> info<%=s%> libre<%=s%> à <%= moment().add(15,'minute').format("HH:mm")%></h1>
+                <%var s = unused.free.length === 1 ? "":"s" %>
+                <h1>Salle<%=s%> info<%=s%> libre<%=s%> à </h1>
+                <div>
+                    <input id='timepicker' class="noSwipe pick" type='text' name='timepicker' value="<%= unused.time%>"/>
+                    <button class="" type="button" name="button">Envoyer</button>
+                </div>
                 <ul>
                 <%
-                    if(unused.length === 0) {
-                        %><li>Aucune :(</li><%
-                    }
-                    for(var i=0; i<unused.length; i++) {
-                        %><li><%=unused[i]%></li><%
+                    for(var i=0; i<unused.all.length; i++) {
+                        var cl="";
+                        if(unused.free.indexOf(unused.all[i]) < 0) {
+                            cl="class=use";
+                        }
+                        %><li  <%=cl%>><%=unused.all[i]%></li><%
                     }
                 %>
                 </ul>
@@ -113,6 +119,7 @@
 
     <script src="/js/jquery-3.1.1.min.js" charset="utf-8"></script>
     <script src="/js/jquery.touchSwipe.min.js" charset="utf-8"></script>
+    <script src='/js/timepicki.js'></script>
     <script src="/js/script.js" charset="utf-8"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
