--- a/views/cmatrix.ejs
+++ b/views/cmatrix.ejs
@@ -2,9 +2,9 @@
 <html>
   <head>
     <title>CMatrix</title>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.6/p5.js"></script>
     <script src="js/cmatrix.js"></script>
   </head>
-  <body style="margin:0">
+  <body style="margin:0; overflow:hidden">
   </body>
 </html>
